Scrollbar fixes (#917)
* removed duplicate scrollbar, remove unnecessary scrollbar

* remove 'overflow: hidden' from asset-form-main-container

* fix harvesting page scrollbars

* hide unnecessary scrollbar in aggregate transaction list

--- a/src/views/forms/FormAggregateTransaction/FormAggregateTransaction.less
+++ b/src/views/forms/FormAggregateTransaction/FormAggregateTransaction.less
@@ -46,7 +46,7 @@
         .transaction-list-container {
             flex: 1;
             width: 100%;
-            overflow-y: scroll;
+            overflow-y: auto;
         }
 
         .bottom-container {
