--- a/src/components/TransactionDetails/TransactionDetails.less
+++ b/src/components/TransactionDetails/TransactionDetails.less
@@ -4,7 +4,6 @@
     max-height: 5rem;
     margin-left: 0.5rem;
     margin-right: 0.2rem;
-    overflow: auto;
 }
 
 .transaction-details-detail-section-title-container {
